--- a/creepytracker.CSharp.csproj
+++ b/creepytracker.CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\common\Plugins\KalmanFilterVector3.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\DirectMulticastSocketClient.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\SaveMessage.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\WriteMatrix.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\WriteSafeFile.cs" />
     <Compile Include="Assets\common\Plugins\UdpBroadcast.cs" />
     <Compile Include="Assets\common\Scripts\CameraOrbit.cs" />
