--- a/creepytracker.CSharp.csproj
+++ b/creepytracker.CSharp.csproj
@@ -77,24 +77,24 @@
     <Compile Include="Assets\common\Plugins\ConfigProperties.cs" />
     <Compile Include="Assets\common\Plugins\KalmanFilterFloat.cs" />
     <Compile Include="Assets\common\Plugins\KalmanFilterVector3.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\DirectMulticastSocketClient.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\ObterStringValues.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\ReadMatrix.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\DirectMulticastSocketClient.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\ReadMatrix.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\WriteMatrix.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\SaveMessage.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\WriteMatrix.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\WriteSafeFile.cs" />
     <Compile Include="Assets\common\Plugins\UdpBroadcast.cs" />
     <Compile Include="Assets\common\Scripts\CameraOrbit.cs" />
     <Compile Include="Assets\common\Scripts\DoNotify.cs" />
     <Compile Include="Assets\common\Scripts\GridOverlay.cs" />
     <Compile Include="Assets\common\Scripts\Logger.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\MyKnees.cs" />
     <Compile Include="Assets\common\Scripts\My Scripts\MyUdpListener.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\OptiTrack\ApplyTransformation.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\OptiTrack\ObjectTracker.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\OptiTrack\OptiDrawScript.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\OptiTrack\OptiObjects.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\OptiTrack\OptitrackManager.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Old\MyKnees.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\ApplyTransformation.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\ObjectTracker.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\OptiDrawScript.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\OptiObjects.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\OptitrackManager.cs" />
     <Compile Include="Assets\common\Scripts\PointCloudSimple.cs" />
     <Compile Include="Assets\common\Scripts\UdpListener.cs" />
     <Compile Include="Assets\trackerhub\Plugins\Human.cs" />
