--- a/creepytracker.CSharp.csproj
+++ b/creepytracker.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.4.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -77,18 +79,22 @@
     <Compile Include="Assets\common\Plugins\ConfigProperties.cs" />
     <Compile Include="Assets\common\Plugins\KalmanFilterFloat.cs" />
     <Compile Include="Assets\common\Plugins\KalmanFilterVector3.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\ObterStringValues.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Static\ObterStringValues.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\DirectMulticastSocketClient.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\ReadMatrix.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\WriteMatrix.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\SaveMessage.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\WriteSafeFile.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveColicoes.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveAvr.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveRecord.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SafeWriteFile.cs" />
     <Compile Include="Assets\common\Plugins\UdpBroadcast.cs" />
     <Compile Include="Assets\common\Scripts\CameraOrbit.cs" />
     <Compile Include="Assets\common\Scripts\DoNotify.cs" />
     <Compile Include="Assets\common\Scripts\GridOverlay.cs" />
     <Compile Include="Assets\common\Scripts\Logger.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\MyUdpListener.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Listener\MyUdpListenerColicoes.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Listener\MyUdpListenerAvr.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Listener\MyUdpListenerRecord.cs" />
     <Compile Include="Assets\common\Scripts\My Scripts\Old\MyKnees.cs" />
     <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\ApplyTransformation.cs" />
     <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\ObjectTracker.cs" />
@@ -113,5 +119,6 @@
     <None Include="Assets\common\Shaders\Grid.shader" />
     <None Include="Assets\configSettings.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
