--- a/creepytracker.CSharp.csproj
+++ b/creepytracker.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.4.1f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -79,29 +77,29 @@
     <Compile Include="Assets\common\Plugins\ConfigProperties.cs" />
     <Compile Include="Assets\common\Plugins\KalmanFilterFloat.cs" />
     <Compile Include="Assets\common\Plugins\KalmanFilterVector3.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\Static\ObterStringValues.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\DirectMulticastSocketClient.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\ReadMatrix.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\Old\OptiTrack\WriteMatrix.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveColicoes.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveAvr.cs" />
-    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveRecord.cs" />
     <Compile Include="Assets\common\Plugins\My Plugins\Save\SafeWriteFile.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveAvr.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveColicoes.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveRecord.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Static\ObterStringValues.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Z_Outros\OptiTrack\DirectMulticastSocketClient.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Z_Outros\OptiTrack\ReadMatrix.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Z_Outros\OptiTrack\WriteMatrix.cs" />
     <Compile Include="Assets\common\Plugins\UdpBroadcast.cs" />
     <Compile Include="Assets\common\Scripts\CameraOrbit.cs" />
     <Compile Include="Assets\common\Scripts\DoNotify.cs" />
     <Compile Include="Assets\common\Scripts\GridOverlay.cs" />
     <Compile Include="Assets\common\Scripts\Logger.cs" />
     <Compile Include="Assets\common\Scripts\My Scripts\Listener\MyUdpListener.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Listener\MyUdpListenerColicoes.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Listener\MyUdpListenerAvr.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Listener\MyUdpListenerRecord.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Old\MyKnees.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\ApplyTransformation.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\ObjectTracker.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\OptiDrawScript.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\OptiObjects.cs" />
-    <Compile Include="Assets\common\Scripts\My Scripts\Old\OptiTrack\OptitrackManager.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Not Use\MyUdpListenerAvr.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Not Use\MyUdpListenerColicoes.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Not Use\MyUdpListenerRecord.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Old\MyKnees.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Old\OptiTrack\ApplyTransformation.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Old\OptiTrack\ObjectTracker.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Old\OptiTrack\OptiDrawScript.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Old\OptiTrack\OptiObjects.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\Old\OptiTrack\OptitrackManager.cs" />
     <Compile Include="Assets\common\Scripts\PointCloudSimple.cs" />
     <Compile Include="Assets\common\Scripts\UdpListener.cs" />
     <Compile Include="Assets\trackerhub\Plugins\Human.cs" />
@@ -120,6 +118,5 @@
     <None Include="Assets\common\Shaders\Grid.shader" />
     <None Include="Assets\configSettings.txt" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
