--- a/creepytracker.CSharp.csproj
+++ b/creepytracker.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.4.2f2</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -91,8 +93,7 @@
     <Compile Include="Assets\Common\Plugins\My Plugins\Save\SaveColicoes.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Save\SaveRecord.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Static\ObterStringValues.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\CreateAndControlVirtualWorld.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\EmulateFileSetUp.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\CreateAndControlVirtualWorld.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\Indicator.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\IndicatorSetUp.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\ReadMatrix.cs" />
