--- a/creepytracker.CSharp.Editor.csproj
+++ b/creepytracker.CSharp.Editor.csproj
@@ -112,6 +112,8 @@
   <ItemGroup>
     <None Include="Assets\Common\Models\Shaders\Skybox-Procedural.shader" />
     <None Include="Assets\Common\Shaders\Grid.shader" />
+    <None Include="Assets\Common\Shaders\MyShaders\Outlined-Silhouette Only.shader" />
+    <None Include="Assets\Common\Shaders\MyShaders\Silhouetted Diffuse.shader" />
     <None Include="Assets\Shaders\GS Billboard.shader" />
     <None Include="Assets\Shaders\VertexColor.shader" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
