--- a/creepytracker.CSharp.csproj
+++ b/creepytracker.CSharp.csproj
@@ -69,70 +69,70 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Common\Plugins\AdaptiveDoubleExponentialFilterFloat.cs" />
-    <Compile Include="Assets\Common\Plugins\AdaptiveDoubleExponentialFilterVector3.cs" />
-    <Compile Include="Assets\Common\Plugins\BodiesMessage.cs" />
-    <Compile Include="Assets\Common\Plugins\CloudMessage.cs" />
-    <Compile Include="Assets\Common\Plugins\CommonUtils.cs" />
-    <Compile Include="Assets\Common\Plugins\ConfigProperties.cs" />
-    <Compile Include="Assets\Common\Plugins\KalmanFilterFloat.cs" />
-    <Compile Include="Assets\Common\Plugins\KalmanFilterVector3.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Debug\DebugHelper.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Debug\MyDebug.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\GameObjectHelper.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\MathConstants.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\MathHelper.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\QuaternionToEuler.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\RandomHelper.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\StringHelper.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\OptiTrack\DirectMulticastSocketClient.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Save\SafeWriteFile.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Save\SaveAvr.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Save\SaveColicoes.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Save\SaveRecord.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Static\ObterStringValues.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\Indicator.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\IndicatorSetUp.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\CenterServer.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\CreateAndControlVirtualWorld.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\ReadMatrix.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\WriteMatrix.cs" />
-    <Compile Include="Assets\Common\Plugins\UdpBroadcast.cs" />
-    <Compile Include="Assets\Common\Scripts\CameraOrbit.cs" />
-    <Compile Include="Assets\Common\Scripts\DoNotify.cs" />
-    <Compile Include="Assets\Common\Scripts\GridOverlay.cs" />
-    <Compile Include="Assets\Common\Scripts\Logger.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\HandleCenter.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Listener\MyUdpListener.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\OptiTrack\OptitrackManager.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\MyKnees.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\MyUdpListenerAvr.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\MyUdpListenerColicoes.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\MyUdpListenerRecord.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\OptiTrack\ApplyTransformation.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\OptiTrack\ObjectTracker.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\OptiTrack\OptiDrawScript.cs" />
-    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\OptiTrack\OptiObjects.cs" />
-    <Compile Include="Assets\Common\Scripts\PointCloudSimple.cs" />
-    <Compile Include="Assets\Common\Scripts\UdpListener.cs" />
-    <Compile Include="Assets\Trackerhub\Plugins\Human.cs" />
-    <Compile Include="Assets\Trackerhub\Plugins\Sensor.cs" />
-    <Compile Include="Assets\Trackerhub\Plugins\SensorBody.cs" />
-    <Compile Include="Assets\Trackerhub\Scripts\HumanSkeleton.cs" />
-    <Compile Include="Assets\Trackerhub\Scripts\RPCServer.cs" />
-    <Compile Include="Assets\Trackerhub\Scripts\Tracker.cs" />
-    <Compile Include="Assets\Trackerhub\Scripts\TrackerProperties.cs" />
-    <Compile Include="Assets\Trackerhub\Scripts\TrackerUI.cs" />
+    <Compile Include="Assets\common\Plugins\AdaptiveDoubleExponentialFilterFloat.cs" />
+    <Compile Include="Assets\common\Plugins\AdaptiveDoubleExponentialFilterVector3.cs" />
+    <Compile Include="Assets\common\Plugins\BodiesMessage.cs" />
+    <Compile Include="Assets\common\Plugins\CloudMessage.cs" />
+    <Compile Include="Assets\common\Plugins\CommonUtils.cs" />
+    <Compile Include="Assets\common\Plugins\ConfigProperties.cs" />
+    <Compile Include="Assets\common\Plugins\KalmanFilterFloat.cs" />
+    <Compile Include="Assets\common\Plugins\KalmanFilterVector3.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Helpers\Debug\DebugHelper.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Helpers\Debug\MyDebug.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Helpers\GameObjectHelper.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Helpers\Math\MathConstants.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Helpers\Math\MathHelper.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Helpers\Math\QuaternionToEuler.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Helpers\Math\RandomHelper.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Helpers\StringHelper.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\OptiTrack\DirectMulticastSocketClient.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SafeWriteFile.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveAvr.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveColicoes.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Save\SaveRecord.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Static\ObterStringValues.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Virtual World\Indicator.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Virtual World\IndicatorSetUp.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Z_Outros\CenterServer.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Z_Outros\CreateAndControlVirtualWorld.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Z_Outros\ReadMatrix.cs" />
+    <Compile Include="Assets\common\Plugins\My Plugins\Z_Outros\WriteMatrix.cs" />
+    <Compile Include="Assets\common\Plugins\UdpBroadcast.cs" />
+    <Compile Include="Assets\common\Scripts\CameraOrbit.cs" />
+    <Compile Include="Assets\common\Scripts\DoNotify.cs" />
+    <Compile Include="Assets\common\Scripts\GridOverlay.cs" />
+    <Compile Include="Assets\common\Scripts\Logger.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\HandleCenter.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Listener\MyUdpListener.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\OptiTrack\OptitrackManager.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\MyKnees.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\MyUdpListenerAvr.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\MyUdpListenerColicoes.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\MyUdpListenerRecord.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\OptiTrack\ApplyTransformation.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\OptiTrack\ObjectTracker.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\OptiTrack\OptiDrawScript.cs" />
+    <Compile Include="Assets\common\Scripts\My Scripts\Z_Outros\OptiTrack\OptiObjects.cs" />
+    <Compile Include="Assets\common\Scripts\PointCloudSimple.cs" />
+    <Compile Include="Assets\common\Scripts\UdpListener.cs" />
+    <Compile Include="Assets\trackerhub\Plugins\Human.cs" />
+    <Compile Include="Assets\trackerhub\Plugins\Sensor.cs" />
+    <Compile Include="Assets\trackerhub\Plugins\SensorBody.cs" />
+    <Compile Include="Assets\trackerhub\Scripts\HumanSkeleton.cs" />
+    <Compile Include="Assets\trackerhub\Scripts\RPCServer.cs" />
+    <Compile Include="Assets\trackerhub\Scripts\Tracker.cs" />
+    <Compile Include="Assets\trackerhub\Scripts\TrackerProperties.cs" />
+    <Compile Include="Assets\trackerhub\Scripts\TrackerUI.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Common\Models\Shaders\Skybox-Procedural.shader" />
-    <None Include="Assets\Common\Shaders\Grid.shader" />
-    <None Include="Assets\Common\Shaders\MyShaders\Outlined-Silhouette Only.shader" />
-    <None Include="Assets\Common\Shaders\MyShaders\Silhouetted Diffuse.shader" />
     <None Include="Assets\Shaders\GS Billboard.shader" />
     <None Include="Assets\Shaders\VertexColor.shader" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
     <None Include="Assets\Standard Assets\Fonts\OpenSans\License!.txt" />
+    <None Include="Assets\common\Models\Shaders\Skybox-Procedural.shader" />
+    <None Include="Assets\common\Shaders\Grid.shader" />
+    <None Include="Assets\common\Shaders\MyShaders\Outlined-Silhouette Only.shader" />
+    <None Include="Assets\common\Shaders\MyShaders\Silhouetted Diffuse.shader" />
     <None Include="Assets\configSettings.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
