--- a/creepytracker.CSharp.csproj
+++ b/creepytracker.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.4.2f2</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -86,10 +88,11 @@
     <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\RandomHelper.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\StringHelper.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\OptiTrack\DirectMulticastSocketClient.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Save\SafeWriteFile.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Save\SaveAvr.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Save\SaveColicoes.cs" />
-    <Compile Include="Assets\Common\Plugins\My Plugins\Save\SaveRecord.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Save\Save Files\SafeWriteFile.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Save\Save Files\SaveAvr.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Save\Save Data\SaveCentrar.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Save\Save Files\SaveColicoes.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Save\Save Files\SaveRecord.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Static\ObterStringValues.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\Indicator.cs" />
     <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\IndicatorSetUp.cs" />
@@ -135,5 +138,6 @@
     <None Include="Assets\Standard Assets\Fonts\OpenSans\License!.txt" />
     <None Include="Assets\configSettings.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
