--- a/creepytracker.CSharp.csproj
+++ b/creepytracker.CSharp.csproj
@@ -79,48 +79,48 @@
     <Compile Include="Assets\Common\Plugins\ConfigProperties.cs" />
     <Compile Include="Assets\Common\Plugins\KalmanFilterFloat.cs" />
     <Compile Include="Assets\Common\Plugins\KalmanFilterVector3.cs" />
-    <Compile Include="Assets\My Files\Plugins\Helpers\Debug\DebugHelper.cs" />
-    <Compile Include="Assets\My Files\Plugins\Helpers\Debug\MyDebug.cs" />
-    <Compile Include="Assets\My Files\Plugins\Helpers\GameObjectHelper.cs" />
-    <Compile Include="Assets\My Files\Plugins\Helpers\Math\MathConstants.cs" />
-    <Compile Include="Assets\My Files\Plugins\Helpers\Math\MathHelper.cs" />
-    <Compile Include="Assets\My Files\Plugins\Helpers\Math\QuaternionToEuler.cs" />
-    <Compile Include="Assets\My Files\Plugins\Helpers\Math\RandomHelper.cs" />
-    <Compile Include="Assets\My Files\Plugins\Helpers\StringHelper.cs" />
-    <Compile Include="Assets\My Files\Plugins\OptiTrack\DirectMulticastSocketClient.cs" />
-    <Compile Include="Assets\My Files\Plugins\SaveAndPlayAndSetUp\Play\EmulateSaveData.cs" />
-    <Compile Include="Assets\My Files\Plugins\SaveAndPlayAndSetUp\Save\SafeWriteFile.cs" />
-    <Compile Include="Assets\My Files\Plugins\SaveAndPlayAndSetUp\Save\SaveAvr.cs" />
-    <Compile Include="Assets\My Files\Plugins\SaveAndPlayAndSetUp\Save\SaveCenter.cs" />
-    <Compile Include="Assets\My Files\Plugins\SaveAndPlayAndSetUp\Save\SaveColicoes.cs" />
-    <Compile Include="Assets\My Files\Plugins\SaveAndPlayAndSetUp\Save\SaveRecord.cs" />
-    <Compile Include="Assets\My Files\Plugins\SaveAndPlayAndSetUp\Set Up\EmulateSaveDataSetUp.cs" />
-    <Compile Include="Assets\My Files\Plugins\Static\ObterStringValues.cs" />
-    <Compile Include="Assets\My Files\Plugins\Virtual World\Indicator.cs" />
-    <Compile Include="Assets\My Files\Plugins\Virtual World\IndicatorSetUp.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\CenterServer.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\CreateAndControlVirtualWorld.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\ReadMatrix.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\SafeCenter.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\WriteMatrix.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Debug\DebugHelper.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Debug\MyDebug.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\GameObjectHelper.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\MathConstants.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\MathHelper.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\QuaternionToEuler.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\Math\RandomHelper.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Helpers\StringHelper.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\OptiTrack\DirectMulticastSocketClient.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\SaveAndPlayAndSetUp\Play\EmulateSaveData.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\SaveAndPlayAndSetUp\Save\Save Data\SaveCentrar.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\SaveAndPlayAndSetUp\Save\Save Files\SafeWriteFile.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\SaveAndPlayAndSetUp\Save\Save Files\SaveAvr.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\SaveAndPlayAndSetUp\Save\Save Files\SaveColicoes.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\SaveAndPlayAndSetUp\Save\Save Files\SaveRecord.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\SaveAndPlayAndSetUp\Save\Save Files\WriteSafeFileV1.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\SaveAndPlayAndSetUp\Set Up\EmulateSaveDataSetUp.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Static\ObterStringValues.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\Indicator.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Virtual World\IndicatorSetUp.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\CenterServer.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\CreateAndControlVirtualWorld.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\ReadMatrix.cs" />
+    <Compile Include="Assets\Common\Plugins\My Plugins\Z_Outros\WriteMatrix.cs" />
     <Compile Include="Assets\Common\Plugins\UdpBroadcast.cs" />
     <Compile Include="Assets\Common\Scripts\CameraOrbit.cs" />
     <Compile Include="Assets\Common\Scripts\DoNotify.cs" />
     <Compile Include="Assets\Common\Scripts\GridOverlay.cs" />
     <Compile Include="Assets\Common\Scripts\Logger.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\HandleCenter.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Listener\MyUdpListener.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\OptiTrack\OptitrackManager.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\MyKnees.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\MyUdpListenerAvr.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\MyUdpListenerColicoes.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\MyUdpListenerRecord.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\OptiTrack\ApplyTransformation.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\OptiTrack\ObjectTracker.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\OptiTrack\OptiDrawScript.cs" />
+    <Compile Include="Assets\Common\Scripts\My Scripts\Z_Outros\OptiTrack\OptiObjects.cs" />
     <Compile Include="Assets\Common\Scripts\PointCloudSimple.cs" />
     <Compile Include="Assets\Common\Scripts\UdpListener.cs" />
-    <Compile Include="Assets\My Files\Scripts\HandleCenter.cs" />
-    <Compile Include="Assets\My Files\Scripts\Listener\MyUdpListener.cs" />
-    <Compile Include="Assets\My Files\Scripts\OptiTrack\OptitrackManager.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\MyKnees.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerAvr.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerColicoes.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerRecord.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\ApplyTransformation.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\ObjectTracker.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\OptiDrawScript.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\OptiObjects.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\Human.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\Sensor.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\SensorBody.cs" />
