--- a/creepytracker.csproj
+++ b/creepytracker.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.4.2f2</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -96,6 +98,7 @@
     <Compile Include="Assets\My Files\Plugins\OptiTrack\DirectMulticastSocketClient.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\SafeWriteFile.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\SaveAvr.cs" />
+    <Compile Include="Assets\My Files\Plugins\Save\SaveCenterToSend.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\SaveCenter.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\SaveColicoes.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\SaveRecord.cs" />
