--- a/creepytracker.csproj
+++ b/creepytracker.csproj
@@ -108,7 +108,8 @@
     <Compile Include="Assets\My Files\Plugins\Helpers\Math\RandomHelper.cs" />
     <Compile Include="Assets\My Files\Plugins\Helpers\ObterStringValues.cs" />
     <Compile Include="Assets\My Files\Plugins\Helpers\StringHelper.cs" />
-    <Compile Include="Assets\My Files\Plugins\OptiTrack\DirectMulticastSocketClient.cs" />
+    <Compile Include="Assets\My Files\Plugins\Listen\ListenBase.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\OptiTrack\DirectMulticastSocketClient.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Info\SafeWriteFile.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveAvr.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Info\SaveCenter.cs" />
@@ -127,15 +128,15 @@
     <Compile Include="Assets\My Files\Plugins\Z_Outros\WriteMatrix.cs" />
     <Compile Include="Assets\My Files\Scripts\Center\HandleVirtualWorld.cs" />
     <Compile Include="Assets\My Files\Scripts\Listener\MyUdpListener.cs" />
-    <Compile Include="Assets\My Files\Scripts\OptiTrack\OptitrackManager.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_1\OptitrackManager.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\MyKnees.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerAvr.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerColicoes.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerRecord.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\ApplyTransformation.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\ObjectTracker.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\OptiDrawScript.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\OptiObjects.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_0\ApplyTransformation.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_0\ObjectTracker.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_0\OptiDrawScript.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_0\OptiObjects.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\Human.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\Sensor.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\SensorBody.cs" />
