--- a/creepytracker.csproj
+++ b/creepytracker.csproj
@@ -117,22 +117,22 @@
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveColicoes.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveLog.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveRecord.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\CenterServer.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\CreateAndControlVirtualWorld.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\CenterServer.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\CreateAndControlVirtualWorld.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Play\EmulateSaveData.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\ReadMatrix.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\SafeCenter.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\ReadMatrix.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\SafeCenter.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Set Up\EmulateSaveDataSetUp.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Virtual World\Indicator.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Virtual World\IndicatorSetUp.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\WriteMatrix.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\WriteMatrix.cs" />
     <Compile Include="Assets\My Files\Scripts\Center\HandleVirtualWorld.cs" />
     <Compile Include="Assets\My Files\Scripts\Listener\MyUdpListener.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_1\OptitrackManager.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\MyKnees.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerAvr.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerColicoes.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\MyUdpListenerRecord.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\Geral\MyKnees.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\Geral\MyUdpListenerAvr.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\Geral\MyUdpListenerColicoes.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\Geral\MyUdpListenerRecord.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_0\ApplyTransformation.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_0\ObjectTracker.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_0\OptiDrawScript.cs" />
